hphp/test/quick/reserved_class1.php.expectf
Fatal error: Cannot use 'HH\bool' as class name as it is reserved in %s on line 3
